standards/gnds-2.0-alpha/alpha/c/src/v2.0/mean/FastRegion.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// FastRegion is the basic handle type in this file. Example:
//    // Create a default FastRegion object:
//    FastRegion handle = FastRegionDefault();
// Functions involving FastRegion are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_ALPHA_V2_0_MEAN_FASTREGION
#define C_INTERFACE_ALPHA_V2_0_MEAN_FASTREGION

#include "GNDStk.h"
#include "v2.0/common/XYs1d.h"
#include "v2.0/mean/Regions1d.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct FastRegionClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ FastRegion
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct FastRegionClass *FastRegion;

// --- Const-aware handles.
typedef const struct FastRegionClass *const ConstHandle2ConstFastRegion;
typedef       struct FastRegionClass *const ConstHandle2FastRegion;
typedef const struct FastRegionClass *      Handle2ConstFastRegion;
typedef       struct FastRegionClass *      Handle2FastRegion;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstFastRegion
FastRegionDefaultConst();

// +++ Create, default
extern_c Handle2FastRegion
FastRegionDefault();

// --- Create, general, const
extern_c Handle2ConstFastRegion
FastRegionCreateConst(
   ConstHandle2ConstXYs1d XYs1d,
   ConstHandle2ConstRegions1d regions1d
);

// +++ Create, general
extern_c Handle2FastRegion
FastRegionCreate(
   ConstHandle2ConstXYs1d XYs1d,
   ConstHandle2ConstRegions1d regions1d
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
FastRegionAssign(ConstHandle2FastRegion This, ConstHandle2ConstFastRegion from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
FastRegionDelete(ConstHandle2ConstFastRegion This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
FastRegionRead(ConstHandle2FastRegion This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
FastRegionWrite(ConstHandle2ConstFastRegion This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
FastRegionPrint(ConstHandle2ConstFastRegion This);

// +++ Print to standard output, as XML
extern_c int
FastRegionPrintXML(ConstHandle2ConstFastRegion This);

// +++ Print to standard output, as JSON
extern_c int
FastRegionPrintJSON(ConstHandle2ConstFastRegion This);


// -----------------------------------------------------------------------------
// Child: XYs1d
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
FastRegionXYs1dHas(ConstHandle2ConstFastRegion This);

// --- Get, const
extern_c Handle2ConstXYs1d
FastRegionXYs1dGetConst(ConstHandle2ConstFastRegion This);

// +++ Get, non-const
extern_c Handle2XYs1d
FastRegionXYs1dGet(ConstHandle2FastRegion This);

// +++ Set
extern_c void
FastRegionXYs1dSet(ConstHandle2FastRegion This, ConstHandle2ConstXYs1d XYs1d);


// -----------------------------------------------------------------------------
// Child: regions1d
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
FastRegionRegions1dHas(ConstHandle2ConstFastRegion This);

// --- Get, const
extern_c Handle2ConstRegions1d
FastRegionRegions1dGetConst(ConstHandle2ConstFastRegion This);

// +++ Get, non-const
extern_c Handle2Regions1d
FastRegionRegions1dGet(ConstHandle2FastRegion This);

// +++ Set
extern_c void
FastRegionRegions1dSet(ConstHandle2FastRegion This, ConstHandle2ConstRegions1d regions1d);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/mean/FastRegion/src/custom.h"

#undef extern_c
#endif